--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 
     <!-- Animasi Scroll -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/images/logoweb.png">
 </head>
 
 <body>
     <!-- Navbar -->
-    <div data-aos="fade-down" data-aos-duration="2000" class="container-fluid text-white sticky-top">
+    <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"
+        class="container-fluid text-white sticky-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg shadow bg-navbar rounded-4">
                 <div class="row justify-content-center">
@@ -35,16 +39,17 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active me-3" aria-current="page" href="#hero">Home</a>
+                                    <a class="nav-link active me-3" aria-current="page" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link me-3" href="#about">Portofolio</a>
+                                    <a class="nav-link me-3" href="#portofolio">Portofolio</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link me-3" href="#">Blog</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link me-3" href="#">Contact</a>
+                                    <a class="nav-link me-3"
+                                        href="https://api.whatsapp.com/send/?phone=6282124509598">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -61,27 +66,35 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div class="row">
-                        <div class="col-6">
-                            <h1 data-aos="fade-right" data-aos-duration="1500">Hello,</h1>
-                            <h2 data-aos="fade-right" data-aos-duration="1500">I am Adha Mastito</h2>
-                            <p data-aos="fade-right" data-aos-duration="1500">UI / UX Design | Front end
-                                Development |Data Analysis.</p>
+                        <div class="col-6 ">
+                            <h1 data-aos="fade-right" data-aos-duration="1500" class="typing ">Hello,</h1>
+                            <!-- <h2 data-aos="fade-right" data-aos-duration="1500" class="typing">I am Adha Mastito</h2> -->
+                            <p data-aos="fade-right" class="mt-3" data-aos-duration="1500">UI / UX Design | Front end
+                                Development | Data Analysis.</p>
                         </div>
                         <div class="col-6 ">
                             <img src="images/foto tito.png" class="img-fluid" data-aos="fade-left"
                                 data-aos-duration="1000" alt="foto Ku" width="300px">
                         </div>
                         <div class="col-6">
-                            <button class="button btn fs-5 " data-aos="fade-up"
-                                data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Let's Talk
-                                <i class="fa-solid fa-arrow-right"></i>
-                            </button>
+                            <a href="https://api.whatsapp.com/send/?phone=6282124509598">
+                                <button class="button btn fs-5 " data-aos="fade-up"
+                                    data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Let's Talk
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
                     <div class="my-5">
-                        <i class="fab fa-linkedin fa-2x p-1"></i>
-                        <i class="fab fa-github fa-2x p-1"></i>
-                        <i class="fab fa-instagram fa-2x p-1"></i>
+                        <a href="https://www.linkedin.com/in/adha-mastito-32005826a" class="icon">
+                            <i class="fab fa-linkedin fa-2x p-1"></i>
+                        </a>
+                        <a href="https://github.com/AdhaTito?tab=repositories" class="icon">
+                            <i class="fab fa-github fa-2x p-1"></i>
+                        </a>
+                        <a href="https://www.instagram.com/adhatito_001" class="icon">
+                            <i class="fab fa-instagram fa-2x p-1"></i>
+                        </a>
                         <p><span> <a href="#" class="text1">Download</a> </span> My Curiculum Vitae</p>
                     </div>
                 </div>
@@ -95,21 +108,23 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-10 text-center ">
-                        <h3 class="fw-bold">About Me</h3>
-                        <hr class="border-2 opacity-50">
-                        </hr>
-                        <div class="text-about">
-                            <p>“Ilmu adalah yang memberikan manfaat, bukan yang sekadar hanya dihafal.”</p>
+                    <div class="col-lg-10 col-md-12">
+                        <div class="text-center">
+                            <h3 class="fw-bold">About Me</h3>
+                            <hr class="border-2 opacity-50">
+                            </hr>
+                            <div class="text-about">
+                                <p>“Ilmu adalah yang memberikan manfaat, bukan yang sekadar hanya dihafal.”</p>
+                            </div>
+                            <p>Saya Mahasiswa Semester 6 jurusan Sistem Informasi yang sedang mencari magang
+                                dibidang Informatika, mampu bekerja secara individu maupun berkolaborasi
+                                dengan Tim, bekerja dengan cepat, up to date dalam perkembangan teknologi
+                                informasi, saat ini saya berusia 22 Tahun. walaupun saya terbilang masih
+                                muda, tapi saya memiliki skill dan Keterampilan yang dapat diandalkan di era
+                                perkembangan industri 4.0 seperti UI / UX Design (Figma), Front End
+                                Development (Html, CSS, Bootstrap 5), Database (MYSQL), Adobe Photoshop,
+                                Adobe Premier, dan Microsoft Office.</p>
                         </div>
-                        <p>Saya Mahasiswa Semester 6 jurusan Sistem Informasi yang sedang mencari magang
-                            dibidang Informatika, mampu bekerja secara individu maupun berkolaborasi
-                            dengan Tim, bekerja dengan cepat, up to date dalam perkembangan teknologi
-                            informasi, saat ini saya berusia 22 Tahun. walaupun saya terbilang masih
-                            muda, tapi saya memiliki skill dan Keterampilan yang dapat diandalkan di era
-                            perkembangan industri 4.0 seperti UI / UX Design (Figma), Front End
-                            Development (Html, CSS, Bootstrap 5), Database (MYSQL), Adobe Photoshop,
-                            Adobe Premier, dan Microsoft Office.</p>
                     </div>
                 </div>
             </div>
@@ -121,30 +136,29 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-10 text-center ">
+                    <div class="text-center">
                         <h3 class="fw-bold text-white flip-left">My Skill</h3>
                         <hr class="border-2 opacity-50">
                         </hr>
                     </div>
-                    <div class="text-center mx-auto col-lg-10 col-md-12 mt-3">
-                        <img src="/images/skill4.png" class="rounded img-fluid" data-aos="flip-right"
-                            data-aos-duration="1000" alt="Figma">
-                        <img src="/images/skill1.png" class="rounded img-fluid" data-aos="flip-right"
-                            data-aos-duration="1500" alt="html">
-                        <img src="/images/skill3.png" class="rounded img-fluid" data-aos="flip-right"
-                            data-aos-duration="2000" alt="CSS">
-                        <img src="/images/skill2.png" class="rounded img-fluid" data-aos="flip-right"
-                            data-aos-duration="2500" alt="bootstrap">
-                        <img src="/images/skill5.png" class="rounded img-fluid" data-aos="flip-right"
-                            data-aos-duration="3000" alt="Photoshop">
-                        <img src="/images/skill6.png" class="rounded img-fluid" data-aos="flip-right"
-                            data-aos-duration="3500" alt="Premier pro">
-                        <img src="/images/skill7.png" class="rounded-circle img-fluid" data-aos="flip-right"
-                            data-aos-duration="4000" alt="Mysql">
-                        <img src="/images/skill8.png" class="rounded img-fluid" data-aos="flip-right"
-                            data-aos-duration="4500" alt="Ms office">
+                    <div class="text-center col-sm-8 mt-3">
+                        <img src="/images/skill4.png" class="rounded" data-aos="flip-right" data-aos-duration="1800"
+                            alt="Figma">
+                        <img src="/images/skill1.png" class="rounded" data-aos="flip-right" data-aos-duration="1800"
+                            alt="html">
+                        <img src="/images/skill3.png" class="rounded" data-aos="flip-right" data-aos-duration="1800"
+                            alt="CSS">
+                        <img src="/images/skill2.png" class="rounded" data-aos="flip-right" data-aos-duration="1800"
+                            alt="bootstrap">
+                        <img src="/images/skill5.png" class="rounded" data-aos="flip-right" data-aos-duration="1800"
+                            alt="Photoshop">
+                        <img src="/images/skill6.png" class="rounded " data-aos="flip-right" data-aos-duration="1800"
+                            alt="Premier pro">
+                        <img src="/images/skill7.png" class="rounded-circle" data-aos="flip-right"
+                            data-aos-duration="1800" alt="Mysql">
+                        <img src="/images/skill8.png" class="rounded-4" data-aos="flip-right" data-aos-duration="1800"
+                            alt="Ms office">
                     </div>
-
                 </div>
             </div>
         </div>
@@ -156,40 +170,40 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-3 col-md-4 col-sm-10 mt-4 text-center">
-                        <div class="card " style="width: 18rem;">
+                    <div class="col-lg-3 col-md-5 col-sm-10 mt-4 text-center">
+                        <div class="card mx-auto" data-aos="fade-right" data-aos-offset="300"
+                            data-aos-easing="ease-in-sine" style="width: 18rem;">
                             <div class="card-body">
                                 <img src="images/ilustrasi 4.jpg" class="rounded-2 img-fluid" alt="" width="150px">
                                 <h4 class="card-subtitle mt-4 mb-2 ">UI / UX Design</h4>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the card's
-                                    content.</p>
+                                <p class="card-text">UI merupakan orang yang mendesain tampilan antarmuka sebuah
+                                    aplikasi atau
+                                    perangkat. Sementara UX designer adalah orang yang mendesain pengalaman pengguna.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-10 mt-4 text-center">
-                        <div class="card " style="width: 18rem;">
+                        <div class="card mx-auto" data-aos="fade-right" data-aos-offset="300"
+                            data-aos-easing="ease-in-sine" style="width: 18rem;">
                             <div class="card-body">
                                 <img src="images/ilustrasi 3.png" class="rounded-2 img-fluid" alt="" width="150px">
                                 <h4 class="card-subtitle mt-4 mb-2 ">Front End</h4>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the card's
-                                    content.</p>
+                                <p class="card-text">Pengembangan antarmuka pengguna grafis dari sebuah situs web,
+                                    melalui penggunaan HTML, CSS, & JavaScript, agar pengguna dapat melihat dan
+                                    berinteraksi dengan situs web.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-10 mt-4 text-center">
-                        <div class="card " style="width: 18rem;">
+                        <div class="card mx-auto" data-aos="fade-right" data-aos-offset="300"
+                            data-aos-easing="ease-in-sine" style="width: 18rem;">
                             <div class="card-body">
                                 <img src="images/ilustrasi.png" class="rounded-2 img-fluid" alt="" width="150px">
                                 <h4 class="card-subtitle mt-4 mb-2 ">Data Analysis</h4>
-                                <p class="card-text">Some quick example text to build on the card title and
-                                    make up the
-                                    bulk
-                                    of the card's
-                                    content.</p>
+                                <p class="card-text">Proses inspeksi, pembersihan dan pemodelan data dengan tujuan
+                                    menemukan informasi yang berguna, menginformasikan kesimpulan dan mendukung
+                                    pengambilan keputusan.</p>
                             </div>
                         </div>
                     </div>
@@ -233,6 +247,7 @@
                                     <img src="/images/serti4.png" width="500px" class="img-fluid" alt="...">
                                 </div>
                             </div>
+                            <p class="text-center text-white-50 fs-6">Swipe</p>
                             <button class="carousel-control-prev" type="button"
                                 data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -259,17 +274,47 @@
                         <hr class="border-2 opacity-50 mb-5">
                         </hr>
                         <div class="text-center mt-3">
-                            <img src="/images/portofolio (1).png" class="rounded-2 " width="1000px" alt="">
-                            <img src="/images/portofolio (2).png" class="rounded-2" width="1000px" alt="">
-                            <img src="/images/portofolio (3).png" class="rounded-2" width="1000px" alt="">
-                            <img src="/images/portofolio (4).png" class="rounded-2" width="1000px" alt="">
-                            <img src="/images/portofolio (5).png" class="rounded-2" width="1000px" alt="">
-                            <img src="/images/portofolio (6).png" class="rounded-2" width="1000px" alt="">
+                            <img src="/images/portofolio (1).png" class="rounded-2 img-fluid mx-auto"
+                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
+                                alt="">
+                            <img src="/images/portofolio (2).png" class="rounded-2 img-fluid mx-auto"
+                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
+                                alt="">
+                            <img src="/images/portofolio (3).png" class="rounded-2 img-fluid mx-auto"
+                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
+                                alt="">
+                            <img src="/images/portofolio (4).png" class="rounded-2 img-fluid mx-auto"
+                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
+                                alt="">
+                            <img src="/images/portofolio (5).png" class="rounded-2 img-fluid mx-auto"
+                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
+                                alt="">
+                            <img src="/images/portofolio (6).png" class="rounded-2 img-fluid mx-auto"
+                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
+                                alt="">
                         </div>
                     </div>
                 </div>
             </div>
     </section>
+
+    <footer id="footer">
+        <div class="mt-5 text-center text-white" data-aos="zoom-in" data-aos-duration="1000">
+            <img src="/images/logoweb.png" class="mt-2" width="80px" alt="">
+            <div class="my-3">
+                <a href="https://www.linkedin.com/in/adha-mastito-32005826a" class="icon">
+                    <i class="fab fa-linkedin fa-2x p-1"></i>
+                </a>
+                <a href="https://github.com/AdhaTito?tab=repositories" class="icon">
+                    <i class="fab fa-github fa-2x p-1"></i>
+                </a>
+                <a href="https://www.instagram.com/adhatito_001" class="icon">
+                    <i class="fab fa-instagram fa-2x p-1"></i>
+                </a>
+                <p>Thanks For Scrolling, Create By <span> <a class="text1">Adha Mastito</a> </span></p>
+            </div>
+        </div>
+    </footer>
 
     <!-- Java Script -->
     <script src="bootstrap5/js/bootstrap.min.js"></script>
@@ -281,6 +326,16 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
+    </script>
+
+    <!-- Animasi Typing -->
+    <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            new TypeIt(".typing", {
+                strings: ["I am Adha Mastito"],
+            }).go();
+        });
     </script>
 
 </body>
