--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav ">
                                 <li class="nav-item">
                                     <a class="nav-link active me-3" aria-current="page" href="#">Home</a>
                                 </li>
@@ -95,7 +95,8 @@
                         <a href="https://www.instagram.com/adhatito_001" class="icon">
                             <i class="fab fa-instagram fa-2x p-1"></i>
                         </a>
-                        <p><span> <a href="#" class="text1">Download</a> </span> My Curiculum Vitae</p>
+                        <p><span> <a href="https://drive.google.com/file/d/1P-PBMMxGZemKLAqQa0bt0IcrG2EVjPJ6/view?usp=sharing"
+                                    class="text1">Download</a> </span> My Curiculum Vitae</p>
                     </div>
                 </div>
             </div>
@@ -274,27 +275,53 @@
                         <hr class="border-2 opacity-50 mb-5">
                         </hr>
                         <div class="text-center mt-3">
-                            <img src="/images/portofolio (1).png" class="rounded-2 img-fluid mx-auto"
-                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
-                                alt="">
-                            <img src="/images/portofolio (2).png" class="rounded-2 img-fluid mx-auto"
-                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
-                                alt="">
-                            <img src="/images/portofolio (3).png" class="rounded-2 img-fluid mx-auto"
-                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
-                                alt="">
-                            <img src="/images/portofolio (4).png" class="rounded-2 img-fluid mx-auto"
-                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
-                                alt="">
-                            <img src="/images/portofolio (5).png" class="rounded-2 img-fluid mx-auto"
-                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
-                                alt="">
-                            <img src="/images/portofolio (6).png" class="rounded-2 img-fluid mx-auto"
-                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" width="1000px"
-                                alt="">
+                            <div class="image">
+                                <p class="fw-bold text-light">Website Fullstack Pustaka Booking menggunakan CI 3</p>
+                                <img src="/images/portofolio (1).png" class="rounded-2 img-fluid mx-auto m-5"
+                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"
+                                width="1000px" alt="">
+                            </div>
+                            <div class="image">
+                                <img src="/images/portofolio (2).png" class="rounded-2 img-fluid mx-auto m-5 "
+                                    data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"
+                                    width="1000px" alt="">
+                            </div>
+                            <div class="image">
+                                <p class="fw-bold text-light">Website Backend Komik menggunakan CI 4</p>
+                                <img src="/images/portofolio (3).png" class="rounded-2 img-fluid mx-auto m-5 "
+                                    data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"
+                                    width="1000px" alt="">
+                            </div>
+                            <div class="image">
+                                <img src="/images/portofolio (4).png" class="rounded-2 img-fluid mx-auto m-5 "
+                                data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"
+                                width="1000px" alt="">
+                            </div>
+                            <div class="image">
+                                <p class="fw-bold text-light">Website FrontEnd Tournament Esport</p>
+                                <img src="/images/portofolio (5).png" class="rounded-2 img-fluid mx-auto m-5 "
+                                    data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"
+                                    width="1000px" alt="">
+                            </div>
+                            <div class="image">
+                                <p class="fw-bold text-light">Design Website Penjualan Rumah dan Properti</p>
+                                <img src="/images/portofolio (7).png" class="rounded-2 img-fluid mx-auto m-5 "
+                                    data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"
+                                    width="1000px" alt="">
+                            </div>
+                            <div class="image">
+                                <p class="fw-bold text-light">Design Website Bootcamp Coding</p>
+                                <img src="/images/portofolio (8).png" class="rounded-2 img-fluid mx-auto m-5 "
+                                    data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"
+                                    width="1000px" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="popup-img">
+                <span>&times;</span>
+                <img src="/images/portofolio (1).png" alt="" class="img-fluid">
             </div>
     </section>
 
@@ -315,6 +342,18 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        document.querySelectorAll('.text-center img').forEach(image => {
+            image.onclick = () => {
+                document.querySelector('.popup-img').style.display = 'block';
+                document.querySelector('.popup-img img').src = image.getAttribute('src')
+            }
+        })
+        document.querySelector('.popup-img span').onclick = () => {
+            document.querySelector('.popup-img').style.display = 'none';
+        }
+    </script>
 
     <!-- Java Script -->
     <script src="bootstrap5/js/bootstrap.min.js"></script>
